# RanokQt

./: .gitignore  .gitmodules  CMakeLists.txt  Ranok.pro  Ranok.pro.user.178c740  main.cpp  res.qrc
Examples/: 1.txt  Bone.txt  Chainik.txt
Examples/Raw/: 1.txt  1_0.txt  1_11.txt  ConceptLopatka.txt  Lopatka.txt  Nuclear1.txt  Tor2.txt  economf.txt  economf1_3.txt  economf1_6.txt  sphere_modul.txt  sphere_sqrt_modul.txt  xsin(PIy_a)+y2cos(PIx_a)__df-dx.txt
Lang/: langfunctions.cpp  langfunctions.h  lexer.cpp  lexer.h  node.h  parser.cpp  program.h
RanokCore/: CMakeLists.txt
RanokCore/src/Language/: LangFunctions.cpp  LangFunctions.h  Lexer.cpp  Node.h  NodeCreator.h  Parser.cpp  Parser.h  Program.cpp  SymbolTable.cpp  SymbolTable.h  Token.h
RanokCore/src/Space/Calculators/: BufferedCalculator.cpp  CommonCalculator.cpp  CommonCalculator.h  ISpaceCalculator.h  LinearGradientModel.h  OpenclCalculator.cpp  OpenclCalculator.h
Render/: cube.cpp  cube.h  window.cpp
assets/Examples/NewFuncs/: 1_new.txt  2dspace.txt  Bone.txt  lopatka.txt
assets/Examples/OldFuncs/: ConceptLopatka.txt  Cub.txt  TeaCup.txt  Tor3.txt  economf_first_system.txt  economf_fourth_system.txt  economy.txt  sphere.txt  xsin(PIy_a)+y2cos(PIx_a).txt
assets/language/: ranok_words.txt
assets/styles/: ManjaroMix.qss  NewStyle.qss  dark.qss  dark2.0.qss
data/: test.py
data/NewFuncs/: 1.txt  1_new.txt  Chainik.txt  kris.txt  lopatka.txt  sphere.txt
data/OldFuncs/: Nuclear.txt  Pawn1.txt  Tor1.txt
data/Results/: temp.txt
examples/NewFuncs/: 1.txt  1_new.txt  2dspace.txt  Bone.txt  Chainik.txt  TeaCup.txt  euclid.txt  kris.txt  lopatka.txt  sphere.txt
examples/OldFuncs/: 1_1.txt  1_12.txt  AV.txt  AV1.txt  Bone.txt  Chainik.txt  LopatkaNew.txt  Nuclear1_new.txt  Pawn.txt  TEST.txt  TeaCupNew.txt  Tor.txt  Tor3_New.txt  economf1.txt  economf1_2.txt  economf1_4.txt  economf1_5.txt  economf_second_system.txt  economf_third_system.txt  mytest.txt  proba.txt
shaders/: grid.frag  grid.vert  line.geom  line.vert  linesPoint.vert  point.frag  point.vert  texture.frag  texture.vert  voxel.frag  voxel.geom  voxel.vert
shaders/Test/: default.frag  default.vert  myRayMarching.frag  raymarching.frag  voxelRaymarching.frag
src/: AppWindow.cpp  AppWindow.h  AsyncVector.h  Color.h  Cube.h  IDrawableObject.h  OpenclCalculator.cpp  OpenclCalculator.h  OpenclGenerator.cpp  OpenclGenerator.h  QSpaceCalculatorWrapper.h  ScreensView.cpp  ScreensView.h  SpaceCalculatorThread.h  Square.cpp  Square.h  TaskThread.h  Utils.h  Vectors.cpp  Vectors.h  main.cpp  taskthread.cpp  taskthread.h
src/Calculators/: ICalculator.h  MImageCalculator.h  MImageMatrixCalculator.cpp  MImageMatrixCalculator.h  MatrixCalculator.cpp  MatrixCalculator.h  ModelCalculator.cpp  ModelCalculator.h  RecursiveCalculator.cpp  RecursiveCalculator.h  VoxelData.h  basecalculator.cpp  basecalculator.h  imagematrixcalculator.cpp  imagematrixcalculator.h  matrixcalculator.cpp  matrixcalculator.h  modelcalculator.cpp  recursivecalculator.cpp  recursivecalculator.h
src/Gui/: BuildSettingsDialog.cpp  BuildSettingsDialog.h  LinearGradientModel.cpp  LinearGradientModel.h  StyleLoader.h  ToggleButton.cpp  Widget.cpp  Widget.h  styleloader.cpp  widget.cpp  widget.h
src/Gui/CodeEditor/: CodeEditor.cpp  CodeEditor.h  CodeEditorTab.cpp  CodeEditorTab.h  Highlighter.cpp  LineEditor.cpp  LineEditor.h  codeeditor.cpp  codeeditor.h  codeeditortab.cpp  codeeditortab.h  highlighter.cpp  highlighter.h  lineeditor.cpp  lineeditor.h
src/Gui/CustomWidgets/: switchbutton.cpp  switchbutton.h
src/Gui/Opengl/: GridObject.cpp  GridObject.h  IOpenglDrawableObject.cpp  IOpenglDrawableObject.h  LinesObject.cpp  LinesObject.h  OpenglCube.cpp  OpenglCube.h  OpenglDrawableObject.cpp  OpenglDrawableObject.h  OpenglObject.cpp  OpenglObject.h  RayMarchingView.cpp  RayMarchingView.h  SceneView.cpp  SceneView.h  ShaderFactory.cpp  ShaderFactory.h  ShaderProgram.cpp  ShaderProgram.h  TestView.cpp  TestView.h  VaoLayout.cpp  VaoLayout.h  VoxelMesh.cpp  VoxelMesh.h  VoxelObject.cpp  VoxelObject.h  WcsObject.cpp  WcsObject.h  openglcube.cpp  openglcube.h  openglobject.cpp  openglobject.h  openglsquare.cpp  (+5 more)
src/Lang/: Example.cpp  langfunctions.cpp  lexer.cpp  lexer.h  node.h  parser.cpp  parser.h  program.cpp  program.h  token.h
src/Language/: LangFunctions.cpp  LangFunctions.h  Lexer.cpp  Node.h  Parser.cpp  Parser.h  Program.cpp  Program.h  SymbolTable.cpp  SymbolTable.h  langfunctions.cpp  langfunctions.h  lexer.cpp  lexer.h  node.h  parser.cpp  parser.h  program.cpp  program.h  token.h
src/Render/: Cube.h  IDrawableObject.h  MainWindow.cpp  MainWindow.h  Menu.cpp  Menu.h  Square.cpp  Square.h  cube.cpp  cube.h  glInclude.h  openglsystem.cpp  openglsystem.h  window.cpp  window.h
src/Screens/: ClearableWidget.h  ModelingScreen.cpp  ModelingScreen.h  RayMarchingScreen.cpp  RayMarchingScreen.h  Screens.h  TestScreen.cpp  TestScreen.h  ViewerScreen.cpp  ViewerScreen.h
src/Space/: SpaceBuilder.cpp  SpaceBuilder.h  SpaceCalculator.cpp  SpaceCalculator.h  VoxelData.h  VoxelImageData.h  spacebuilder.cpp  spacebuilder.h  spacecalculator.cpp  spacecalculator.h
(+20 files in other folders)
